--- a/server/app/build.gradle
+++ b/server/app/build.gradle
@@ -24,8 +24,10 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.appcompat:appcompat:1.5.1'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'com.google.android.material:material:1.7.0'
+    implementation 'com.google.android.material:material:1.9.0'
+    implementation 'androidx.security:security-crypto:1.1.0-alpha06'
     implementation 'com.nanohttpd:nanohttpd:2.3.1'
+    implementation 'androidx.core:core:1.10.1'
 }
