--- a/server/app/src/main/AndroidManifest.xml
+++ b/server/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
         android:usesCleartextTraffic="true">
         
         <activity
-            android:name=".MainActivity"
+            android:name="com.phoneremote.server.MainActivity"
             android:exported="true"
             android:screenOrientation="portrait">
             <intent-filter>
@@ -35,12 +35,12 @@
         </activity>
         
         <service
-            android:name=".RemoteServerService"
+            android:name="com.phoneremote.server.RemoteServerService"
             android:enabled="true"
             android:exported="false" />
             
         <service
-            android:name=".ScreenCaptureService"
+            android:name="com.phoneremote.server.ScreenCaptureService"
             android:enabled="true"
             android:exported="false" />
     </application>
